--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,8 @@
     image="https://tesseract.projectnaptha.com/img/eng_bw.png"
     lang="eng"
     [width]="370"
-    [height]="166">
+    [height]="166"
+    
+    (ocrText)="getOcrText($event)">
   </ocr-scanner-draw>
 </div>
